imrpove routes and swagger files
