# controllers/restaurant.js
@@ -9,19 +9,19 @@ const getAll = async (req, res) => {
 };
 
 const getSingle = async (req, res) => {
-    const restaurantName = req.params.name; 
-    const result = await mongodb
-        .getDb()
-        .db()
-        .collection('restaurant')
-        .findOne({ 'restaurant.name': restaurantName });
+  const restaurantName = req.params.name;
+  const result = await mongodb
+    .getDb()
+    .db()
+    .collection('restaurant')
+    .findOne({ name: restaurantName });
 
-    if (result) {
-        res.setHeader('Content-Type', 'application/json');
-        res.status(200).json(result.restaurant);
-    } else {
-        res.status(404).json({ message: 'User Not Found' });
-    }
+  if (result) {
+    res.setHeader('Content-Type', 'application/json');
+    res.status(200).json(result);
+  } else {
+    res.status(404).json({ message: 'User Not Found' });
+  }
 };
 
 module.exports = { getAll, getSingle };
